# speculative-cascade

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md
examples/: README.md  basic_usage.py  cost_model_demo.py
src/speculative_cascade/: __init__.py  cli.py
src/speculative_cascade/benchmarks/: __init__.py  compare_methods.py  run_benchmarks.py
src/speculative_cascade/core/: __init__.py  cascade.py  cost_model.py  scheduler.py  verification.py
src/speculative_cascade/models/: __init__.py  draft.py  target.py  tiny.py
src/speculative_cascade/utils/: __init__.py  metrics.py  profiling.py
tests/: test_cascade.py  test_cost_model.py  test_tiny_model.py
